# Agri-GUI

./: README.md  pyproject.toml
agri/: __main__.py  agri.py  agriwindowmanager.kv
agri/images/: ASD_Symbol.avif
agri/kvs/: agrichecksscreen.kv  agrimainwindow.kv  agripowerscreen.kv  agrisettingsscreen.kv  agristatusscreen.kv  agrivarscreen.kv  agriwindowmanager.kv
